--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Welcome to the Main Page, el Dude</h1>
+        <h2>Hello from Github</h2>
         Hey, Duderinos
     </body>
 
