--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
-        <h1>Welcome to the Main Page, el Dude</h1>
+        <h1 style="color:blue";>Welcome to the Main Page, el Dude</h1>
         <h2>Hello from Github</h2>
         Hey, Duderinos
     </body>
